WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117897
fourthTier: Small strings shouldn't get GC'd
https://bugs.webkit.org/show_bug.cgi?id=117897
Summary
fourthTier: Small strings shouldn't get GC'd
Filip Pizlo
Reported
2013-06-21 15:45:18 PDT
Patch forthcoming.
Attachments
the patch
(10.79 KB, patch)
2013-06-21 15:46 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-06-21 15:46:52 PDT
Created
attachment 205224
[details]
the patch
Mark Hahnenberg
Comment 2
2013-06-21 15:50:41 PDT
Comment on
attachment 205224
[details]
the patch r=me
Filip Pizlo
Comment 3
2013-06-21 16:06:05 PDT
Landed in
http://trac.webkit.org/changeset/151864
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug